--- a/OffshoreTrack/Views/Cliente/New.cshtml
+++ b/OffshoreTrack/Views/Cliente/New.cshtml
@@ -1,11 +1,11 @@
-﻿@model OffshoreTrack.Models.Material
+﻿@model OffshoreTrack.Models.Cliente
 
 @{
     ViewData["Title"] = "New";
 }
 
 <div class="pagetitle">
-    <h1 class="display-4"> Cadastrar: Material</h1>
+    <h1 class="display-4"> Cadastrar: Cliente</h1>
 </div>
 
 <div class="row">
@@ -14,83 +14,13 @@
             <div class="card-body">
                 <form method="post" action="Create">
 
-                    <label for="inputText" class="col-sm col-form-label">Material:</label>
-                    <input type="text" class="form-control" id="material" name="material" asp-for="material" />
+                    <label for="inputText" class="col-sm col-form-label">Cliente:</label>
+                    <input type="text" class="form-control" id="cliente" name="cliente" asp-for="cliente" />
                     <br />
 
-                    <label for="inputText" class="col-sm col-form-label">Descrição:</label>
-                    <input type="text" class="form-control" id="descricao" name="descricao" asp-for="descricao" />
+                    <label for="inputText" class="col-sm col-form-label">CNPJ:</label>
+                    <input type="text" class="form-control" id="cnpj" name="cnpj" asp-for="cnpj" />
                     <br />
-
-                    <label for="inputText" class="col-sm col-form-label">Tamanho:</label>
-                    <input type="text" class="form-control" id="tamanho" name="tamanho" asp-for="tamanho" />
-                    <br />
-
-
-                    <div class="form-group">
-                        <label asp-for="id_tipo" class="col-sm col-form-label">Tipo:</label>
-                        <select asp-for="id_tipo" class="form-control" asp-items="@ViewBag.tipo"></select>
-                        <span asp-validation-for="id_tipo" class="text-danger"></span>
-                    </div>
-                    <br />
-
-                    <div class="form-group">
-                        <label asp-for="id_criticidade" class="col-sm col-form-label">Criticidade:</label>
-                        <select asp-for="id_criticidade" class="form-control" asp-items="@ViewBag.criticidade"></select>
-                        <span asp-validation-for="id_criticidade" class="text-danger"></span>
-                    </div>
-                    <br />
-
-                    <div class="form-group">
-                        <label asp-for="id_setor" class="col-sm col-form-label">Setor:</label>
-                        <select asp-for="id_setor" class="form-control" asp-items="@ViewBag.setor"></select>
-                        <span asp-validation-for="id_setor" class="text-danger"></span>
-                    </div>
-                    <br />
-
-                    <div class="form-group">
-                        <label asp-for="id_cliente" class="col-sm col-form-label">Cliente:</label>
-                        <select asp-for="id_cliente" class="form-control" asp-items="@ViewBag.cliente"></select>
-                        <span asp-validation-for="id_cliente" class="text-danger"></span>
-                    </div>
-                    <br />
-
-                    <div class="form-group">
-                        <label asp-for="id_local" class="col-sm col-form-label">Local:</label>
-                        <select asp-for="id_local" class="form-control" asp-items="@ViewBag.local"></select>
-                        <span asp-validation-for="id_local" class="text-danger"></span>
-                    </div>
-                    <br />
-
-                    <div class="form-group">
-                        <label asp-for="id_usuario" class="col-sm col-form-label">Usuário:</label>
-                        <select asp-for="id_usuario" class="form-control" asp-items="@ViewBag.usuario"></select>
-                        <span asp-validation-for="id_usuario" class="text-danger"></span>
-                    </div>
-                    <br />
-
-                    <div class="form-group">
-                        <label asp-for="id_fornecedor" class="col-sm col-form-label">Fornecedor:</label>
-                        <select asp-for="id_fornecedor" class="form-control" asp-items="@ViewBag.fornecedor"></select>
-                        <span asp-validation-for="id_fornecedor" class="text-danger"></span>
-                    </div>
-                    <br />
-
-                    <div class="form-group">
-                        <label asp-for="anexo" class="col-sm col-form-label">Anexo:</label>
-                        <input class="form-control" type="file" id="anexo">
-                    </div>
-                    <br />
-
-                    <div class="form-group">
-                        <label asp-for="cod_barra" class="col-sm col-form-label">Código de barras:</label>
-                        <input type="text" class="form-control" id="cod_barra" asp-for="cod_barra" />
-                        <svg id="barcode"></svg>
-                    </div>
-                    <br />
-
-
-
 
                     <button type="submit" class="btn btn-primary" name="submit" value="submit">Cadastrar</button>
                 </form>
