--- a/OffshoreTrack/Views/Cliente/Read.cshtml
+++ b/OffshoreTrack/Views/Cliente/Read.cshtml
@@ -1,4 +1,4 @@
-﻿@model OffshoreTrack.Models.Manutencao
+﻿@model OffshoreTrack.Models.Cliente
 
 @{
     ViewData["Title"] = "Read";
@@ -7,11 +7,11 @@
 <div class="pagetitle">
     <div class="row">
         <div class="col-md-6">
-            <h1 class="display-4">Visualização: Manutenção</h1>
+            <h1 class="display-4">Visualização: Cliente</h1>
         </div>
         <div class="col-md-6">
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                <a class="btn btn-primary" role="button" asp-area="" asp-controller="Manutencao" asp-action="Index">Voltar</a>
+                <a class="btn btn-primary" role="button" asp-area="" asp-controller="Cliente" asp-action="Index">Voltar</a>
             </div>
         </div>
     </div>
@@ -21,26 +21,13 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-
-                <label for="inputText" class="col-sm col-form-label">Manutenção:</label>
-                <input type="text" class="form-control" id="manutencao" name="manutencao" asp-for="manutencao" readonly />
+                <label for="inputText" class="col-sm col-form-label">Cliente:</label>
+                <input type="text" class="form-control" id="cliente" name="cliente" asp-for="cliente" readonly />
                 <br />
 
-                <label for="inputText" class="col-sm col-form-label">Descrição:</label>
-                <input type="text" class="form-control" id="descricao" name="descricao" asp-for="descricao" readonly />
+                <label for="inputText" class="col-sm col-form-label">CNPJ:</label>
+                <input type="text" class="form-control" id="cnpj" name="cnpj" asp-for="cnpj" readonly />
                 <br />
-
-                <label for="inputText" class="col-sm col-form-label">Material:</label>
-                <p class="form-control" readonly>@Html.DisplayFor(model => model.material.material)</p>
-
-                <label for="inputText" class="col-sm col-form-label">Setor:</label>
-                <p class="form-control" readonly>@Html.DisplayFor(model => model.setor.setor)</p>
-
-                <label for="inputText" class="col-sm col-form-label">Fornecedor:</label>
-                <p class="form-control" readonly>@Html.DisplayFor(model => model.fornecedor.fornecedor)</p>
-
-                <label for="inputText" class="col-sm col-form-label">Criticidade:</label>
-                <p class="form-control" readonly>@Html.DisplayFor(model => model.criticidade.criticidade)</p>
 
                 <br />
             </div>
