--- a/OffshoreTrack/Views/Material/New.cshtml
+++ b/OffshoreTrack/Views/Material/New.cshtml
@@ -88,10 +88,9 @@
                         <svg id="barcode"></svg>
                     </div>
                     <br />
+                    <button onclick="printBarcode()" class="btn btn-primary">Imprimir Código de Barras</button>
 
-
-
-
+                    <br />
                     <button type="submit" class="btn btn-primary" name="submit" value="submit">Cadastrar</button>
                 </form>
             </div>
@@ -101,7 +100,25 @@
 
 @section Scripts
 {
+    <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.3/dist/JsBarcode.all.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/jquery.inputmask.bundle.min.js"></script>
-
+    <script>
+        $(document).ready(function(){
+            $('#cod_barra').change(function(){
+                var value = $(this).val();
+                $('#barcodeTarget').html(""); //clear the barcode target
+                JsBarcode("#barcodeTarget", value, {format: "CODE128"}); //generate the barcode
+            });
+        });
+        function printBarcode() {
+            var printWindow = window.open('', '_blank');
+            var barcodeSVG = $('#barcodeTarget').html();
+            printWindow.document.write('<html><head><title>Print Barcode</title></head><body>');
+            printWindow.document.write(barcodeSVG);
+            printWindow.document.write('</body></html>');
+            printWindow.document.close();
+            printWindow.print();
+        }
+    </script>
 }
