--- a/OffshoreTrack/Views/Local/Index.cshtml
+++ b/OffshoreTrack/Views/Local/Index.cshtml
@@ -37,7 +37,7 @@
                         {
                             <tr>
                                 <td>@item.local</td>
-                                <td>@item.Cliente</td>
+                                <td>@item.Cliente?.cliente</td>
                                 <td>
                                     <a class="btn btn-primary" href="Local/Read/@item.id_local"><i class="bi bi-eye"></i></a>
                                     <a class="btn btn-success" href="Local/Edit/@item.id_local"><i class="bi bi-pencil"></i></a>
