--- a/OffshoreTrack/Views/Local/New.cshtml
+++ b/OffshoreTrack/Views/Local/New.cshtml
@@ -19,7 +19,7 @@
                     <br />
                     
                     <div class="form-group">
-                        <label asp-for="id_cliente" class="col-sm col-form-label">Cliente:</label>
+                        <label asp-for="id_cliente" class="col-form-label">Cliente:</label>
                         <select asp-for="id_cliente" class="form-control" asp-items="@ViewBag.cliente"></select>
                         <span asp-validation-for="id_cliente" class="text-danger"></span>
                     </div>
