--- a/OffshoreTrack/Views/Local/Read.cshtml
+++ b/OffshoreTrack/Views/Local/Read.cshtml
@@ -26,8 +26,7 @@
                 <br />
 
                 <label for="inputText" class="col-sm col-form-label">Cliente:</label>
-                <p class="form-control" readonly>@Html.DisplayFor(model => model.Cliente)</p>
-
+                <p class="form-control" readonly>@Html.DisplayFor(model => model.Cliente.cliente)</p>
                 <br />
             </div>
         </div>
