--- a/OffshoreTrack/Views/Usuario/Index.cshtml
+++ b/OffshoreTrack/Views/Usuario/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<OffshoreTrack.Models.Material>
+﻿@model List<OffshoreTrack.Models.Usuario>
 @{
     ViewData["Title"] = "Index";
 }
@@ -6,11 +6,11 @@
 <div class="pagetitle">
     <div class="row">
         <div class="col-md-6">
-            <h1 class="display-4">Materiais</h1>
+            <h1 class="display-4">Usuários</h1>
         </div>
         <div class="col-md-6">
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                <a class="btn btn-primary" role="button" asp-area="" asp-controller="Material" asp-action="New"> Cadastrar novo </a>
+                <a class="btn btn-primary" role="button" asp-area="" asp-controller="Usuario" asp-action="New"> Cadastrar novo </a>
             </div>
         </div>
     </div>
@@ -26,10 +26,10 @@
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th scope="col">Material</th>
-                            <th scope="col">Tipo</th>
-                            <th scope="col">Setor</th>
-                            <th scope="col">Fornecedor</th>
+                            <th scope="col">Usuário</th>
+                            <th scope="col">Nome</th>
+                            <th scope="col">Tipo de Permissão</th>
+
                             <th></th>
                         </tr>
                     </thead>
@@ -37,14 +37,12 @@
                         @foreach (var item in Model)
                         {
                             <tr>
-                                <td>@item?.material</td>
-                                <td>@item?.tipo</td>
-                                <td>@item?.setor</td>
-                                <td>@item?.fornecedor</td>
-
+                                <td>@item.usuario</td>
+                                <td>@item.nome</td>
+                                <td>@item.Permissao?.nome_permissao</td>
                                 <td>
-                                    <a class="btn btn-primary" href="Material/Read/@item.id_material"><i class="bi bi-eye"></i></a>
-                                    <a class="btn btn-success" href="Material/Edit/@item.id_material"><i class="bi bi-pencil"></i></a>
+                                    <a class="btn btn-primary" href="Usuario/Read/@item.id_usuario"><i class="bi bi-eye"></i></a>
+                                    <a class="btn btn-success" href="Usuario/Edit/@item.id_usuario"><i class="bi bi-pencil"></i></a>
                                 </td>
                             </tr>
                         }
