--- a/OffshoreTrack/Views/Permissao/New.cshtml
+++ b/OffshoreTrack/Views/Permissao/New.cshtml
@@ -25,6 +25,8 @@
                     <br>
                     <label><input type="checkbox" asp-for="pode_deletar"> Pode Deletar</label><br />
                     <br>
+                    <label><input type="checkbox" asp-for="permissao_admin"> Permissão de Administrador</label><br />
+                    <br>
                     <button type="submit" class="btn btn-primary" name="submit" value="submit">Cadastrar</button>
                 </form>
             </div>
