--- a/OffshoreTrack/Views/Permissao/Edit.cshtml
+++ b/OffshoreTrack/Views/Permissao/Edit.cshtml
@@ -39,6 +39,10 @@
                     <div class="form-group">
                         <label><input type="checkbox" asp-for="pode_deletar"> Pode Deletar</label>
                     </div>
+                    <div class="form-group">
+                        <label><input type="checkbox" asp-for="permissao_admin"> Permissão de Administrador</label>
+                    </div>
+
 
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                         <button type="submit" class="btn btn-success" name="submit" value="submit">Atualizar</button>
