--- a/OffshoreTrack/Views/Permissao/Read.cshtml
+++ b/OffshoreTrack/Views/Permissao/Read.cshtml
@@ -36,6 +36,10 @@
                     <br>
                     <dt class="col-sm-2">Pode Deletar</dt>
                     <dd class="col-sm-10">@Html.DisplayFor(model => model.pode_deletar)</dd>
+                    <br>
+                    <dt class="col-sm-2">Permissão de Administrador</dt>
+                    <dd class="col-sm-10">@Html.DisplayFor(model => model.permissao_admin)</dd>
+
                 </dl>
                 <br />
             </div>
